# DocTree-NLP

./: .gitignore  README.md  pyproject.toml  update_all_imports.sh  update_imports.sh
.github/: index.md
configs/: example.toml
demo/: main_demo.ipynb  streamlit_app.py
docs/: architecture.md
doctree_nlp/: __init__.py  api_client.py  api_env.py  defaults.py  env_loader.py  lazy_document.py  notebook.py  parsers.py  rate_limiter.py  structure.py
examples/: __init__.py  _test_import.py  alternative_sources_example.py  auto_token_example.py  basic_usage.py  bullet_point_parser.py  caching_example.py  check_access.py  defaults_example.py  doc_parsing_example.py  document_example.py  document_parsing_example.py  env_loader_example.py  fuzzy_extraction.py  fuzzy_pattern_extraction.py  jupyter_example.py  lazy_loading_example.py  llm_text_improvement.py  local_source_example.py  parsing_example.py  raw_data_example.py  setup_test_data.py  source_example.py  test_functionality.py  windowing_example.py
notion_nlp/: __init__.py  api_client.py  api_env.py  core.py  document_parser.py  env_loader.py  hierarchy.py  models.py  parsers.py  structure.py  text_processor.py
notionlp/: __init__.py  api_client.py  api_env.py  cache_manager.py  caching.py  defaults.py  document_windowing.py  notebook.py  parsers.py  rate_limiter.py  structure.py  text_processor.py  windowing.py
temp/: fix_notebook.py
tests/: test_cache_manager.py  test_caching.py  test_doc_parser.py  test_doctree.py  test_document.py  test_document_parser.py  test_env_loader.py  test_hierarchy.py  (+10 more)
(+12 files in other folders)
